--- a/1/EomTool/EomToolWeb/Views/Workflow/AffiliateCampaignAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/AffiliateCampaignAmounts.cshtml
@@ -56,8 +56,8 @@ Accounting Period: <b>@Model.CurrentEomDateString</b><br />
         <td>&nbsp;</td>
         <td>@ca.CostCurr.name</td>
         <td style="text-align:right">@ca.Cost.ToString("N2")</td>
-        <td style="text-align:center">@ca.CampaignStatusName</td>
-        <td style="text-align:center">@ca.AccountingStatusName</td>
+        <td style="text-align:center">@ca.CampStatusName</td>
+        <td style="text-align:center">@ca.AStatusName</td>
         <td>@ca.AdManagerName</td>
         <td>@ca.AcctManagerName</td>
         <td>@ca.MediaBuyerName</td>
