adjust num units

--- a/1/EomTool/EomToolWeb/Views/Admin/AccountingSheet.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/AccountingSheet.cshtml
@@ -76,9 +76,9 @@ Accounting Period: <b>@Model.CurrentEomDateString</b><br />
                         AdvName: { type: 'string', editable: false },
                         Pid: { type: 'number', editable: false },
                         CampName: { editable: false },
-                        RevPerUnit: { type: 'number' },
-                        CostPerUnit: { type: 'number' },
-                        Units: { type: 'number', editable: false },
+                        RevPerUnit: { type: 'number', validation: { required: true } },
+                        CostPerUnit: { type: 'number', validation: { required: true } },
+                        Units: { type: 'number', validation: { min: 0, required: true } },
                         UnitTypeId: { type: 'number' },
                         Rev: { type: 'number', editable: false },
                         Cost: { type: 'number', editable: false },
