--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
@@ -14,7 +14,6 @@
     <fieldset>
         <legend>Edit Search Profile</legend>
         @Html.HiddenFor(m => m.SearchProfileId)
-        @Html.HiddenFor(m => m.ShowCassConvs)
         @Html.HiddenFor(m => m.UseConvertedClicks)
         @Html.HiddenFor(m => m.ShowSearchChannels)
         @Html.HiddenFor(m => m.LCaccid)
@@ -43,7 +42,7 @@
                 </tr>
                 <tr>
                     <td>@Html.LabelFor(m => m.ShowCassConvs)</td>
-                    <td>@Html.DisplayFor(m => m.ShowCassConvs) (click-assisted conversions - report only)</td>
+                    <td>@Html.EditorFor(m => m.ShowCassConvs) (click-assisted conversions - report only)</td>
                 </tr>
                 <tr>
                     <td>@Html.LabelFor(m => m.UseConvertedClicks)</td>
