--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -34,7 +34,7 @@
                    @(Model.SearchProfile.ShowRevenue ? "CreateSummaryGrid" : "CreateSummaryGridLeadGen"),
                    @(Model.SearchProfile.ShowViewThrus ? "true" : "false"),
                    @(Model.SearchProfile.ShowCalls ? "true" : "false"),
-                   '@(Model.SearchProfile.ShowRevenue ? "revenue" : "clicks")',
+                   '@(Model.SearchProfile.ShowRevenue ? "revenue" : "title")',
                    18
                    );
     };
